--- a/TestFramework/src/main/resources/smart.properties
+++ b/TestFramework/src/main/resources/smart.properties
@@ -1,7 +1,7 @@
 smart.framework.jdbc.driver=com.mysql.jdbc.Driver
 smart.framework.jdbc.url=jdbc:mysql://localhost:3306/Test
-smart.framework.jdbc.username=yisa
-smart.framework.jdbc.password=ff123321
+smart.framework.jdbc.username=root
+smart.framework.jdbc.password=root
 smart.framework.app.base_package=org.smart4j.testproject
 smart.framework.app.jsp_path=/WEB-INF/view/
 smart.framework.app.asset_path=/asset/
