--- a/SmartFrameWork/pom.xml
+++ b/SmartFrameWork/pom.xml
@@ -6,8 +6,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.smart4j</groupId>
-    <artifactId>smart-framework</artifactId>
+    <groupId>com.yisaer</groupId>
+    <artifactId>lighting-framework</artifactId>
     <version>1.1.2</version>
 
     <properties>
